--- a/test/etc-asterisk/extensions.conf
+++ b/test/etc-asterisk/extensions.conf
@@ -1,15 +1,24 @@
 [audiows]
 exten = 100,1,Answer()
-same = n,AudioWS(ws://localhost:8080/syncecho)
+same = n,AudioWS(ws://localhost:8080/echo)
+same = n,DumpChan()
 same = n,Hangup()
 
 exten = 200,1,Answer()
 same = n,AudioWS(ws://localhost:8080/syncsin)
+same = n,DumpChan()
 same = n,Hangup()
 
 exten = 300,1,Answer()
 same = n,AudioWS(ws://localhost:8080/asyncsin)
+same = n,DumpChan()
 same = n,Hangup()
+
+exten = 400,1,Answer()
+same = n,AudioWS(ws://localhost:8080/record)
+same = n,DumpChan()
+same = n,Hangup()
+
 
 [from-phone]
 include =>audiows
